--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,13 +2,14 @@ body {
   background: $brand-color;
   color: $text-color;
   font-family: $font-family;
-  font-size: 1.3125em;
+  font-size: 1em;
   line-height: 1.5;
 }
 
 h1 {
   font-size: 3em;
   margin: .5em auto;
+  font-family: $serif-font-family;
 }
 
 h2 {
@@ -53,11 +54,11 @@ strong {
 }
 
 a {
-  color: $text-color;
+  color: $muted-text-color;
 }
 
 a:focus {
-  outline: 1px dashed $text-color;
+  outline: 1px dashed $muted-text-color;
 }
 
 blockquote {
