--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,10 @@
-$brand-color:         #fede00;
+$brand-color:         #050633;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #0b0404;
-$muted-text-color:    #64644B;
-$font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
+$text-color:          #ffffff;
+$article-text-color:  #000000;
+$muted-text-color:    #2289fb;
+$serif-font-family:   "Merriweather", "Times New Roman", serif;
+$font-family:         "Lato", "Roboto", sans-serif;
 
 $on-bigphone:         375px;
 $on-tablet:           768px;
